--- a/as1.vcxproj
+++ b/as1.vcxproj
@@ -83,6 +83,9 @@
   <ItemGroup>
     <ClCompile Include="BezierSurfaces.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
